# uni-claude-code

./: .gitignore  .npmrc  CLAUDE.md  Cargo.toml  MEMORY_AUDIT.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/milestones/v1.0-phases/01-rust-vendoring/: 01-REVIEW.md
.planning/milestones/v1.0-phases/02-npm-vendoring/: 02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-PATTERNS.md
.planning/milestones/v1.0-phases/03-build-docs/: 03-01-PLAN.md  03-02-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md
.planning/milestones/v1.1-phases/04-chat-persistence/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-REVIEW.md
.planning/milestones/v1.1-phases/05-chat-visibility-controls/: 05-02-SUMMARY.md  05-03-PLAN.md  05-CONTEXT.md  05-HUMAN-UAT.md  05-REVIEW.md  05-VERIFICATION.md
.planning/phases/01-rust-vendoring/: 01-01-SUMMARY.md  01-01-vendor-uni-crates-PLAN.md  01-02-SUMMARY.md  01-02-rewrite-cargo-manifests-PLAN.md  01-03-SUMMARY.md  01-03-TEST-NOTES.md  01-03-regenerate-lock-and-verify-PLAN.md  01-VERIFICATION.md
.planning/phases/02-npm-vendoring/: 02-01-PLAN.md  02-03-TEST-NOTES.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-VERIFICATION.md
.planning/phases/03-build-docs/: 03-01-SUMMARY.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-TEST-NOTES.md  03-REVIEW.md  03-VERIFICATION.md
.planning/phases/04-chat-persistence/: 04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-HUMAN-UAT.md  04-VERIFICATION.md
.planning/phases/05-chat-visibility-controls/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-03-PLAN.md  05-03-SUMMARY.md  05-DISCUSSION-LOG.md  05-HUMAN-UAT.md  05-PATTERNS.md  05-VERIFICATION.md
.planning/todos/pending/: wr-02-terminal-refit-view-switch.md
crates/claude-code-core/: Cargo.toml  README.md
crates/claude-code-core/src/: lib.rs  parser.rs  runner.rs  session.rs  types.rs
crates/uni-common/: Cargo.toml  README.md
crates/uni-common/src/: error.rs  id.rs  lib.rs  text.rs  time.rs
crates/uni-db/: Cargo.toml
crates/uni-db/src/: error.rs  helpers.rs  lib.rs  migrate.rs  pool.rs  transaction.rs
crates/uni-process/: Cargo.toml  README.md
crates/uni-process/src/: config.rs  events.rs  lib.rs  process.rs
crates/uni-settings/: Cargo.toml  README.md
crates/uni-settings/src/: keys.rs  lib.rs  store.rs
crates/uni-ssh/: Cargo.toml  README.md
crates/uni-ssh/src/: forward.rs  handler.rs  lib.rs  manager.rs  proxy.rs  socks5.rs  types.rs
crates/uni-terminal/: Cargo.toml
crates/uni-terminal/src/: lib.rs  manager.rs  shell.rs  types.rs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: claude.rs  clipboard.rs  files.rs  history.rs  mcp.rs  mod.rs  pipeline.rs  projects.rs  ssh_tunnel.rs  terminal.rs  uni_settings.rs
src/__tests__/: App.test.tsx  ChatPanel.test.tsx  ClaudeMdEditor.test.tsx  DiffViewer.test.tsx  DualPanelLayout.test.tsx  FileTreePanel.test.tsx  HistoryPage.test.tsx  McpServersPage.test.tsx  MessageItem.test.tsx  MessageList.test.tsx  PipelinePage.test.tsx  ProjectSidebar.test.tsx  PromptInput.test.tsx  SettingsPage.test.tsx  SshStatusIndicator.test.tsx  StatusBar.test.tsx  ToolUseBlock.test.tsx  WelcomeScreen.test.tsx  safeListener.test.tsx  setup.ts
src/components/: ClaudeMdEditor.tsx  CreateProjectModal.tsx  DiffViewer.tsx  DualPanelLayout.tsx  FileTreePanel.tsx  HistoryPage.tsx  McpServerModal.tsx  McpServersPage.tsx  PipelinePage.tsx  ProjectSidebar.tsx  SessionTabs.tsx  SettingsPage.tsx  SshStatusIndicator.tsx  WelcomeScreen.tsx
src/components/chat/: ChatPanel.tsx  MessageItem.tsx  MessageList.tsx  PromptInput.tsx  StatusBar.tsx  ToolUseBlock.tsx
src/constants/: pipelinePrompts.ts
src/hooks/: usePipelineController.ts
src/i18n/: i18n.ts
src/i18n/locales/: en.json  ru.json
src/types/: claude.ts
src/utils/: safeListener.ts
