[package]
name = "uni-claude-code"
version = "0.1.0"
edition = "2021"

[lib]
name = "uni_claude_code_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# UNI Framework — core
uni-common = { path = "../crates/uni-common" }
uni-settings = { path = "../crates/uni-settings" }

# UNI Framework — modules
uni-ssh = { path = "../crates/uni-ssh" }
uni-terminal = { path = "../crates/uni-terminal" }
uni-db = { path = "../crates/uni-db" }

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

dirs = "6"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
chrono = "0.4"

# Workspace crates
claude-code-core = { path = "../crates/claude-code-core" }
