[package]
name = "claude-code-core"
version = "0.1.0"
edition = "2021"
description = "Claude Code CLI wrapper with stream-json parsing"
license = "MIT"

[dependencies]
uni-common = { path = "../uni-common" }
uni-process = { path = "../uni-process" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
