[package]
name = "uni-db"
version = "0.1.0"
edition = "2021"
description = "SQLite database layer for UNI Framework"
license = "MIT"

[dependencies]
uni-common = { path = "../uni-common" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
