[package]
name = "uni-ssh"
version = "0.1.0"
edition = "2021"
description = "SSH tunnel with SOCKS5 proxy and auto-reconnect for UNI Framework"
license = "MIT"
repository = "https://github.com/ts-vit/ai-chat"
homepage = "https://github.com/ts-vit/ai-chat"
keywords = ["ssh", "tunnel", "socks5", "proxy"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
russh = "0.46"
russh-keys = "0.46"
async-trait = "0.1"
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
